# browser-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: browser.rs  lib.rs  main.rs  mcp.rs  tools.rs  tools.rs.eval-bak  tools.rs.v2-bak  types.rs
