[package]
name = "browser-mcp"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Shared browser automation library for CPC servers (chromiumoxide + CDP)"
repository = "https://github.com/AIWander/browser-mcp"
readme = "README.md"
keywords = ["cpc", "mcp", "browser", "automation", "chromiumoxide"]
categories = ["web-programming", "asynchronous"]
rust-version = "1.75"

[lib]
name = "browser_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
base64 = "0.21"
reqwest = { version = "0.11", features = ["native-tls", "json"], default-features = false }
scraper = "0.18"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
vision-core = { git = "https://github.com/AIWander/vision-core", tag = "v0.1.0" }
